<resources>
    <string name="google_maps_key">AIzaSyDXbeduJIII5l3irMmUfCzKKkJQ6YSSJQA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_welcome">Welcome</string>
    <string name="splash_to">to</string>
    <string name="splash_reward">Reward</string>
    <string name="splash_app">App</string>
    <string name="welcome_new_customer">New\nCustomer</string>
    <string name="welcome_existing_member">Existing\nMember</string>
    <string name="login_label">Login</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset">Reset</string>
    <string name="login_enter_mobile_number">Enter Mobile No.</string>
    <string name="login_enter_user_name">Enter User Name</string>
    <string name="login_number_hint">03xx-xxxxxxx</string>
    <string name="login_next">NEXT</string>
    <string name="login_verify_your_mobile">Verify your mobile</string>
    <string name="login_resend_otp">Resend</string>
    <string name="registration_account_completion">Account Completion</string>
    <string name="registration_let_s_get_registered">let\'s get Registered</string>
    <string name="registration_label">Let\'s get Registered</string>
    <string name="reg_sender_mobile_warning">We are not going to share mobile numbers with others. we will send you an OTP over SMS to Register</string>
    <string name="home_title">title</string>
    <string name="home_name">Name</string>
    <string name="alt_rewards">Rewards</string>
    <string name="alt_my_cart">My Cart</string>
    <string name="alt_redeem">Redeem</string>
    <string name="alt_score">Dashboard</string>
    <string name="alt_dashboard">Dashboard</string>
    <string name="alt_nav_name">ATHER REHAN</string>
    <string name="alt_nav_location">Islamabad</string>
    <string name="alt_profile_dashboard">Profile Dashboard</string>
    <string name="alt_trips">Trips</string>
    <string name="alt_games">Games</string>
    <string name="alt_share_with_friends">Share with Friends</string>
    <string name="alt_create_groups">Create Groups</string>
    <string name="alt_feedback">Feedback</string>
    <string name="alt_select_voucher">Select Voucher</string>
    <string name="alt_personal_details">Personal Details</string>
    <string name="alt_digits_four">80%</string>
    <string name="alt_area_details">Areas of Interest</string>
    <string name="alt_books">BOOKS</string>
    <string name="alt_shopping">SHOPPING</string>
    <string name="alt_game">GAMES</string>
    <string name="alt_movies">MOVIES</string>
    <string name="alt_next">NEXT</string>
    <string name="digits_three">40%</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="make">Vehicle model</string>
    <string name="purpose">Purpose</string>
    <string name="registration_no">Registration No.</string>
    <string name="registration_year">Registration Year</string>
    <string name="color">Color</string>
    <string name="engine_no">Engine No.</string>
    <string name="engine_no_optional">Engine No. (Optional)</string>
    <string name="chassis">Chassis No.</string>
    <string name="chassis_optional">Chassis No. (Optional)</string>
    <string name="car_details">Car Details</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="digits">20%</string>
    <string name="car_upto_200_points">Up To 200 Points</string>
    <string name="insurance_upto_200_points">Up To 200 Points</string>
    <string name="feedback_upto_200_points">Up To 200 Points</string>
    <string name="area_upto_200_points">Up To 200 Points</string>
    <string name="insurance_details">Insurance </string>
    <string name="feedback_details">Feedback</string>
    <string name="area_details">Areas of Interest</string>
    <string name="personal_details">Personal Details</string>
    <string name="digits_two">60%</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="digits_four">80%</string>
    <string name="enter_your_feedback_here">Enter your feedback here</string>
    <string name="name_company">Name of Insurance Company</string>
    <string name="renewal_date">Renewal Date</string>
    <string name="insurance_premium">Insurance Premium</string>
    <string name="deductible">Deductible</string>
    <string name="reason">Reasons for choosing current insurer</string>
    <string name="reasons_for_no">Reasons for not having insurance</string>
    <string name="things">Things that can be improved</string>
    <string name="digits_eight">80%</string>
    <string name="my_trips">TRIPS</string>
    <string name="rewards">Rewards</string>
    <string name="carList">Cars List</string>
    <string name="my_trip_detail">Trip Detail</string>
    <string name="dateAndTime">Friday 11:22 PM</string>
    <string name="dateAndDay">June 17, Friday</string>
    <string name="time_dummy"> 12:00 PM</string>
    <string name="address">St#3, Block A,PWD. islamabad</string>
    <string name="location">Islamabad</string>
    <string name="location_details">Morning Cafe 12:02 AM</string>
    <string name="location_details_again">GLC1 , Gulberg Greens, islamabad</string>
    <string name="address2">Gulberg Greens, islamabad</string>
    <string name="address3">St#3, Block A,PWD. islamabad</string>
    <string name="address4">St#4, Block A,PWD. islamabad</string>
    <string name="address5">St#5, Block A,PWD. islamabad</string>
    <string name="cc_gallery">Gallery</string>
    <string name="cc_turn_on">Turn on</string>
    <string name="cc_take_snap">Take Snap</string>
    <string name="reg_question1">Let\'s start with your mobile number here</string>
    <string name="reg_question2">Enter the 6 digit code we sent to you via SMS</string>
    <string name="reg_question3">Enter Email to verify your account.</string>
    <string name="reg_question4">Enter the 6 digit code we sent to you via Email</string>
    <string name="reg_question10">Please Enter Name</string>
    <string name="reg_question5">Please enter or scan your CNIC</string>
    <string name="reg_question11">Please upload picture of your CNIC</string>
    <string name="reg_question6">Enter your marital status (Single or Married)</string>
    <string name="reg_question7">Upload Picture or Take picture</string>
    <string name="reg_question8">Please Enter your password</string>
    <string name="reg_question9">Re - enter password</string>
    <string name="reg_confirm_pass">confirm password</string>
    <string name="reg_question_cnic_confirmation">Kindly confirm if your CNIC details are correct. \n 1. Cnic  \n 2. Dob \n 3. Gender and after colon enter the information you want to update, e.g.., Cnic: 123456799, Dob:01.01.2000, Gender: Male</string>
    <string name="reg_pass">Password</string>
    <string name="reg_name">Name</string>
    <string name="reg_forgot_pass">Forgot Password?</string>
    <string name="reg_upload">Upload</string>
    <string name="reg_marital_status">Marital status</string>
    <string name="reg_cnic_hint">xxxxxxxxxxxxx</string>
    <string name="reg_hint_pin">xxxxxx</string>
    <string name="reg_dob">Date of Birth</string>
    <string name="reg_gender">Gender</string>
    <string name="reg_hint_email">example@xyz.com</string>
    <string name="reg_hint_number">03xx-xxxxxxx</string>
    <string name="verificaion">Verification</string>
    <string name="capture_cnic_front">Capture CNIC front</string>
    <string name="scan_lower_caption">Make sure lightning is good and any lettering is clear before continuing</string>
    <string name="scan_upper_caption">Position the Card within the frame</string>
    <string name="scan_upper_caption_front">Capture CNIC Front</string>
    <string name="scan_upper_caption_back">Capture CNIC Back</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="userName">User Name</string>
    <string name="CNIC">CNIC</string>
    <string name="submit">submit</string>
    <string name="logout">Logout</string>
    <string name="complete_profile_label">To get more rewards complete your profile.</string>
    <string name="dashboard_speed">speed</string>
    <string name="cornering">Cornering</string>
    <string name="distance">Distance</string>
    <string name="braking">Braking</string>
    <string name="timeOfDay">Time Of Day</string>
    <string name="totalDistance">Total Distance</string>
    <string name="acceleration">Acceleration</string>
    <string name="time">Time</string>
    <string name="speeding">Speeding</string>
    <string name="total_distance">Total Distance</string>
    <string name="profile_setting">Profile Settings</string>
    <string name="policyNumber">Policy Number</string>
    <string name="vin">Vehicle Insurance Number</string>
    <string name="motorType">Motor Type</string>
    <string name="deliveryMethod">Delivery Method</string>
    <string name="deviceType">DeviceType</string>
    <string name="passwordErrorMsg">Password must contain eight characters, alphabets, alphanumeric and at least one special character</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwordNotMatched">Password not matched</string>
    <string name="tripsLocationServiceLabel">Location Service</string>
    <string name="tripsStarted">Trip Started</string>
    <string name="warning_imei_required">IMEI number required</string>
    <string name="forget_password">Forgot Password</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="networkError">Network Error</string>
    <string name="continue_label">Continue</string>
    <string name="error_valid_mobile">Please Enter Valid Mobile Number</string>
    <string name="error_valid_user_name">Please Enter Valid User Name</string>
    <string name="choose_account">Choose your\nAccount</string>
    <string name="label_enter_verification_code">Enter Verification Code</string>
    <string name="label_verification_sent">Verification Code was sent to</string>
    <string name="default_vehicle">Default Vehicle</string>
    <string name="newCar">Add Car</string>
    <string name="viewDetails">View Details</string>
    <string name="how_to_improve_your_score">How to Improve your score?</string>
    <string name="learn_more">Learn More</string>
    <string name="help">Help</string>
    <string name="no_trips_record_found">No trips record found</string>
    <string name="see_more">See more</string>
    <string name="no_item_found">No Item Found</string>
    <string name="redeem_earned_points_title">Total Earned Points</string>
    <string name="redeemed_points_title">Redeemed</string>
    <string name="win_points_title">Win Amount</string>
    <string name="redeem_points_available_title">Points Available</string>
    <string name="redeem_available_title">Available</string>
    <string name="redeem_started_title">Started</string>
    <string name="redeem_completed_title">Completed</string>
    <string name="my_redeem_title">My Redeems</string>
    <string name="search">Search..</string>
    <string name="something_went_wrong">Something went wrong, please try agian later</string>
    <string name="give_reason">Kindly share your reason with us</string>
    <string name="change_default_car">Before deleting, please update your default car. </string>
    <string name="permission_msg">Permissions Require</string>
    <string name="referece_code_alert">Reference Code!</string>
    <string name="reference_code_msg">Are you referred by someone? \nIf yes, please enter reference code otherwise skip this message.</string>
    <string name="add">Add</string>
    <string name="skip">Skip</string>
    <string name="enter_referece_code_here">Enter reference code</string>
    <string name="grid_view">Grid View</string>
    <string name="list_view">List View</string>
    <string name="no_games">No Games Available</string>
</resources>