<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/new_ic_splash_background"
        tools:context=".views.activities.ActivitySplash">

        <TextView
            android:id="@+id/title"
            style="@style/label_top_mediumX"
            android:layout_marginEnd="@dimen/_3sdp"
            android:text="@string/splash_welcome"
            app:layout_constraintBottom_toTopOf="@+id/splash_icon"
            app:layout_constraintEnd_toStartOf="@+id/tv_to"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/splash_icon" />

        <TextView
            android:id="@+id/tv_to"
            style="@style/label_top_largeX"
            android:text="@string/splash_to"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="@+id/splash_icon"
            app:layout_constraintStart_toEndOf="@+id/title"
            app:layout_constraintTop_toTopOf="@id/title" />

        <ImageView
            android:id="@+id/splash_icon"
            android:layout_width="@dimen/_130sdp"
            android:layout_height="@dimen/_40sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_splash" />

        <TextView
            android:id="@+id/tv_reward"
            style="@style/label_top_largeX"
            android:layout_marginEnd="@dimen/_3sdp"
            android:text="@string/splash_reward"
            app:layout_constraintEnd_toStartOf="@id/tv_app"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/splash_icon"
            app:layout_constraintTop_toBottomOf="@id/splash_icon" />

        <TextView
            android:id="@+id/tv_app"
            style="@style/label_top_mediumX"
            android:text="@string/splash_app"
            app:layout_constraintBottom_toBottomOf="@id/tv_reward"
            app:layout_constraintEnd_toEndOf="@id/splash_icon"
            app:layout_constraintStart_toEndOf="@+id/tv_reward"
            app:layout_constraintTop_toTopOf="@id/tv_reward" />

        <com.agrawalsuneet.dotsloader.loaders.LazyLoader
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app"
            app:lazyloader_animDur="300"
            app:lazyloader_dotsDist="10dp"
            app:lazyloader_dotsRadius="10dp"
            app:lazyloader_firstDelayDur="150"
            app:lazyloader_firstDotColor="@color/gray_shade_69"
            app:lazyloader_interpolator="@android:anim/decelerate_interpolator"
            app:lazyloader_secondDelayDur="300"
            app:lazyloader_secondDotColor="@color/progress_primaryV2"
            app:lazyloader_thirdDotColor="@color/cmSecondary" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
