<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="350dp"
    android:layout_gravity="center"
    android:layout_height="wrap_content">




    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/block_dialog_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/blockAlertMsgTV"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/alertTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:gravity="left"
                android:padding="@dimen/_4sdp"
                android:text="@string/reference_code_msg"
                android:textColor="@color/black"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />


            <EditText
                android:id="@+id/referenceCodeET"
                android:layout_width="0dp"
                android:layout_height="@dimen/_38sdp"
                android:layout_marginTop="@dimen/_4sdp"
                android:background="@color/white"
                android:hint="@string/enter_referece_code_here"
                android:inputType="number"
                android:maxLines="1"
                android:maxLength="6"
                android:padding="@dimen/_4sdp"
                android:singleLine="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/alertTV"
                app:layout_constraintTop_toBottomOf="@+id/alertTV"
                app:layout_constraintVertical_bias="0.0" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48sdp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/referenceCodeET">


                <Button
                    android:id="@+id/skipReferenceCodeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginRight="@dimen/_4sdp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_login_next"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/skip"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/addReferenceCodeBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginRight="@dimen/_8sdp"
                    android:layout_weight="1"
                    android:background="@drawable/invisible_btn"
                    android:gravity="center"
                    android:padding="@dimen/_4sdp"
                    android:text="@string/add"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />

            </LinearLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/currencyExchangeTV"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/signup_top_bg"
        android:padding="8dp"
        android:text="@string/referece_code_alert"
        android:textColor="@color/white"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />




</androidx.constraintlayout.widget.ConstraintLayout>