<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

        <variable
            name="onClickListener"
            type="com.jsbl.genix.utils.callBacks.OnViewClickListener" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        tools:context=".views.fragments.AvailableFragment"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_Start"
            android:layout_width="1px"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.22" />

        <TextView
            android:id="@+id/grid_item_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_grid"
            android:drawablePadding="@dimen/_3sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:onClick="@{(view)->onClickListener.onClick(view,0)}"
            android:text="@string/grid_view"
            android:textColor="@color/color_selector"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toStartOf="@id/gl_Start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_label"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            android:drawableStart="@drawable/ic_list_selector"
            android:drawablePadding="@dimen/_3sdp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/_10sdp"
            android:text="@string/list_view"
            android:onClick="@{(view)->onClickListener.onClick(view,0)}"
            android:textColor="@color/color_selector"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/gl_Start"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/gamingRV"
            android:layout_width="match_parent"
            android:background="@color/bg_screen"
            android:layout_height="0dp"
            android:onClick="@{(view)->onClickListener.onClick(view,0)}"
            android:layout_marginBottom="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:clickable="true"
            app:layout_constraintTop_toBottomOf="@id/grid_item_label" />

        <TextView
            android:id="@+id/noGamesTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/black"
            android:text="@string/no_games"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/list_item_label" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>